[gd_scene load_steps=3 format=3 uid="uid://di18uoin1grrf"]

[ext_resource type="Script" path="res://scripts/Title.gd" id="1_8v2cc"]

[sub_resource type="LabelSettings" id="LabelSettings_vyejc"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8v2cc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 911.0
offset_top = 205.0
offset_right = 984.0
offset_bottom = 341.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Random" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Random"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 151.0
offset_right = 264.0
offset_bottom = 174.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 155
text = "Bombseeker Prototype"
label_settings = SubResource("LabelSettings_vyejc")

[node name="Coins" type="Label" parent="."]
layout_mode = 0
offset_left = 915.0
offset_top = 100.0
offset_right = 976.0
offset_bottom = 123.0
text = "Coins: 0"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 174.0
offset_top = 232.0
offset_right = 840.0
offset_bottom = 512.0
text = "W, A, S, D to move around. 

Mark Bombs
Press M + W, A, S, D to mark bombs on surrounding tiles.

Space bar to reveal all neighboring tiles.
Press N to mark all neighboring unrevealed tiles. 

Earn 1 gold for exiting the map safely and another gold for each marked bomb."

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Random" to="." method="_on_random_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
